[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Alex Pavlov <yukiu217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isodate = "^0.6.1"
uritemplate-py = "^3.0.2"
google-api-python-client = "1.7.9"
google-auth-httplib2 = "0.0.3"
google-auth-oauthlib = "0.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
